@@ -1,5 +1,10 @@
 2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/getroot.c (convert_system_partition_to_system_disk): Support
+	nbd disks.
+
+2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/ufs.c (grub_ufs_dir): Stop if direntlen is 0 to avoid
 	infinite loop on corrupted FS.
 
